[gd_scene load_steps=25 format=3 uid="uid://n87rw5cxnnn8"]

[ext_resource type="Script" path="res://src/Game/game.gd" id="1_ne6pe"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/input_handler.gd" id="2_4winb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/main_game_input_handler.gd" id="3_08i3b"]
[ext_resource type="Script" path="res://src/Map/map.gd" id="3_xyl86"]
[ext_resource type="Script" path="res://src/Map/dungeon_generator.gd" id="4_15hgc"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/game_over_input_handler.gd" id="4_gxmdu"]
[ext_resource type="Script" path="res://src/Map/field_of_view.gd" id="5_bvmgb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/history_viewer_input_handler.gd" id="5_hrkyq"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/base_input_handler.gd" id="6_ay8ab"]
[ext_resource type="Texture2D" uid="uid://h7i8uiwlysq2" path="res://assets/images/kenney_1-bit-pack/monochrome_packed.png" id="8_kgm6f"]
[ext_resource type="FontFile" uid="uid://bk0fq2awle8d5" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Pixel.ttf" id="9_8xlja"]
[ext_resource type="Script" path="res://src/GUI/mouseover_checker.gd" id="9_eusf6"]
[ext_resource type="Script" path="res://src/GUI/hp_display.gd" id="9_njvq4"]
[ext_resource type="PackedScene" uid="uid://d36pgskfsvwj2" path="res://src/GUI/Reticle/reticle.tscn" id="11_n4t22"]
[ext_resource type="Script" path="res://src/GUI/message_log.gd" id="11_xxafc"]
[ext_resource type="Script" path="res://src/GUI/card_display_panel.gd" id="16_on26a"]
[ext_resource type="PackedScene" uid="uid://dndq5iahsttml" path="res://src/GUI/CardPanel/card_panel.tscn" id="17_vnefh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q7j4i"]
atlas = ExtResource("8_kgm6f")
region = Rect2(768, 336, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey3id"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = SubResource("AtlasTexture_q7j4i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyudx"]
bg_color = Color(0.498039, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnwhi"]
bg_color = Color(0, 0.498039, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c11as"]
font = ExtResource("9_8xlja")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sr2kr"]
font = ExtResource("9_8xlja")
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_84atu"]
content_margin_left = 0.0
content_margin_top = 8.0
content_margin_right = 0.0
content_margin_bottom = 8.0
texture = SubResource("AtlasTexture_q7j4i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="InterfaceRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/VBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1246, 746)
render_target_update_mode = 4

[node name="Game" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport"]
script = ExtResource("1_ne6pe")

[node name="InputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("2_4winb")

[node name="MainGameInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler" node_paths=PackedStringArray("reticle")]
script = ExtResource("3_08i3b")
reticle = NodePath("../../Map/Reticle")

[node name="GameOverInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("4_gxmdu")

[node name="HistoryViewerInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("5_hrkyq")
messages_panel_path = NodePath("../../../../../InfoBar/MessagesPanel")
message_log_path = NodePath("../../../../../InfoBar/MessagesPanel/MessageLog")

[node name="DummyInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("6_ay8ab")

[node name="Map" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("3_xyl86")

[node name="DungeonGenerator" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("4_15hgc")

[node name="FieldOfView" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("5_bvmgb")

[node name="Tiles" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="Entities" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="MouseoverChecker" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("9_eusf6")

[node name="Reticle" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map" instance=ExtResource("11_n4t22")]

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
zoom = Vector2(2, 2)

[node name="InfoBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="StatsPanel" type="PanelContainer" parent="HBoxContainer/VBoxContainer/InfoBar"]
custom_minimum_size = Vector2(160, 128)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_ey3id")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel"]
layout_mode = 2

[node name="HpDisplay" type="MarginContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
script = ExtResource("9_njvq4")

[node name="HpBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_oyudx")
theme_override_styles/fill = SubResource("StyleBoxFlat_jnwhi")
step = 1.0
value = 50.0
show_percentage = false

[node name="HpLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "HP:30/30"
label_settings = SubResource("LabelSettings_c11as")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MouseoverLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
label_settings = SubResource("LabelSettings_sr2kr")

[node name="MessagesPanel" type="PanelContainer" parent="HBoxContainer/VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ey3id")

[node name="MessageLog" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/InfoBar/MessagesPanel"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("11_xxafc")

[node name="MessageList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/InfoBar/MessagesPanel/MessageLog"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CardDisplayPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/panel = SubResource("StyleBoxTexture_84atu")
script = ExtResource("16_on26a")

[node name="CardScroll" type="ScrollContainer" parent="HBoxContainer/CardDisplayPanel"]
layout_mode = 2

[node name="CardVBox" type="VBoxContainer" parent="HBoxContainer/CardDisplayPanel/CardScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardPanel" parent="HBoxContainer/CardDisplayPanel/CardScroll/CardVBox" instance=ExtResource("17_vnefh")]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 1

[connection signal="player_created" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay" method="initialize"]
[connection signal="entities_focussed" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map/MouseoverChecker" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/MouseoverLabel" method="set_text"]
